<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Department">

    <RadioGroup
        android:id="@+id/radioGroup_DeptOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton_ComputerScience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioOption_ComputerScience"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_SoftwareInfoSystems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioOption_SoftwareInfoSystems"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_BioInformatics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioOption_BioInformatics"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton_DataScience"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioOption_DataScience"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button_Cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/grey"
        android:text="@string/button_Cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_DeptSelect"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_DeptSelect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/grey"
        android:text="@string/button_Select"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_Cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>